; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/sc/extr_control.c_Control.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/sc/extr_control.c_Control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@TRUE = common dso_local global i32 0, align 4
@SERVICE_STOP = common dso_local global i32 0, align 4
@SERVICE_PAUSE_CONTINUE = common dso_local global i32 0, align 4
@SERVICE_INTERROGATE = common dso_local global i32 0, align 4
@SERVICE_USER_DEFINED_CONTROL = common dso_local global i32 0, align 4
@SC_MANAGER_CONNECT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"[SC] OpenSCManager FAILED %lu:\0A\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"[SC] OpenService FAILED %lu:\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"[SC] ControlService FAILED %lu:\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Control(i32 %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_4__, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32 0, i32* %12, align 4
  %15 = load i32, i32* @TRUE, align 4
  store i32 %15, i32* %13, align 4
  %16 = load i32, i32* %5, align 4
  switch i32 %16, label %23 [
    i32 128, label %17
    i32 129, label %19
    i32 136, label %19
    i32 130, label %19
    i32 134, label %19
    i32 131, label %19
    i32 132, label %19
    i32 133, label %19
    i32 135, label %21
  ]

17:                                               ; preds = %4
  %18 = load i32, i32* @SERVICE_STOP, align 4
  store i32 %18, i32* %12, align 4
  br label %33

19:                                               ; preds = %4, %4, %4, %4, %4, %4, %4
  %20 = load i32, i32* @SERVICE_PAUSE_CONTINUE, align 4
  store i32 %20, i32* %12, align 4
  br label %33

21:                                               ; preds = %4
  %22 = load i32, i32* @SERVICE_INTERROGATE, align 4
  store i32 %22, i32* %12, align 4
  br label %33

23:                                               ; preds = %4
  %24 = load i32, i32* %5, align 4
  %25 = icmp sge i32 %24, 128
  br i1 %25, label %26, label %31

26:                                               ; preds = %23
  %27 = load i32, i32* %5, align 4
  %28 = icmp sle i32 %27, 255
  br i1 %28, label %29, label %31

29:                                               ; preds = %26
  %30 = load i32, i32* @SERVICE_USER_DEFINED_CONTROL, align 4
  store i32 %30, i32* %12, align 4
  br label %32

31:                                               ; preds = %26, %23
  store i32 0, i32* %12, align 4
  br label %32

32:                                               ; preds = %31, %29
  br label %33

33:                                               ; preds = %32, %21, %19, %17
  %34 = load i32, i32* @SC_MANAGER_CONNECT, align 4
  %35 = call i32* @OpenSCManager(i32* null, i32* null, i32 %34)
  store i32* %35, i32** %9, align 8
  %36 = load i32*, i32** %9, align 8
  %37 = icmp eq i32* %36, null
  br i1 %37, label %38, label %43

38:                                               ; preds = %33
  %39 = call i32 @_T(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %40 = call i32 (...) @GetLastError()
  %41 = call i32 (i32, ...) @_tprintf(i32 %39, i32 %40)
  %42 = load i32, i32* @FALSE, align 4
  store i32 %42, i32* %13, align 4
  br label %72

43:                                               ; preds = %33
  %44 = load i32*, i32** %9, align 8
  %45 = load i32, i32* %6, align 4
  %46 = load i32, i32* %12, align 4
  %47 = call i32* @OpenService(i32* %44, i32 %45, i32 %46)
  store i32* %47, i32** %10, align 8
  %48 = load i32*, i32** %10, align 8
  %49 = icmp eq i32* %48, null
  br i1 %49, label %50, label %55

50:                                               ; preds = %43
  %51 = call i32 @_T(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %52 = call i32 (...) @GetLastError()
  %53 = call i32 (i32, ...) @_tprintf(i32 %51, i32 %52)
  %54 = load i32, i32* @FALSE, align 4
  store i32 %54, i32* %13, align 4
  br label %72

55:                                               ; preds = %43
  %56 = load i32*, i32** %10, align 8
  %57 = load i32, i32* %5, align 4
  %58 = call i32 @ControlService(i32* %56, i32 %57, i32* %11)
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %65, label %60

60:                                               ; preds = %55
  %61 = call i32 @_T(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  %62 = call i32 (...) @GetLastError()
  %63 = call i32 (i32, ...) @_tprintf(i32 %61, i32 %62)
  %64 = load i32, i32* @FALSE, align 4
  store i32 %64, i32* %13, align 4
  br label %72

65:                                               ; preds = %55
  %66 = call i32 @CopyMemory(%struct.TYPE_4__* %14, i32* %11, i32 4)
  %67 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 1
  store i64 0, i64* %67, align 8
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  store i64 0, i64* %68, align 8
  %69 = load i32, i32* %6, align 4
  %70 = load i32, i32* @FALSE, align 4
  %71 = call i32 @PrintService(i32 %69, i32* null, %struct.TYPE_4__* %14, i32 %70)
  br label %72

72:                                               ; preds = %65, %60, %50, %38
  %73 = load i32, i32* %13, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %77, label %75

75:                                               ; preds = %72
  %76 = call i32 (...) @ReportLastError()
  br label %77

77:                                               ; preds = %75, %72
  %78 = load i32*, i32** %10, align 8
  %79 = icmp ne i32* %78, null
  br i1 %79, label %80, label %83

80:                                               ; preds = %77
  %81 = load i32*, i32** %10, align 8
  %82 = call i32 @CloseServiceHandle(i32* %81)
  br label %83

83:                                               ; preds = %80, %77
  %84 = load i32*, i32** %9, align 8
  %85 = icmp ne i32* %84, null
  br i1 %85, label %86, label %89

86:                                               ; preds = %83
  %87 = load i32*, i32** %9, align 8
  %88 = call i32 @CloseServiceHandle(i32* %87)
  br label %89

89:                                               ; preds = %86, %83
  %90 = load i32, i32* %13, align 4
  ret i32 %90
}

declare dso_local i32* @OpenSCManager(i32*, i32*, i32) #1

declare dso_local i32 @_tprintf(i32, ...) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32* @OpenService(i32*, i32, i32) #1

declare dso_local i32 @ControlService(i32*, i32, i32*) #1

declare dso_local i32 @CopyMemory(%struct.TYPE_4__*, i32*, i32) #1

declare dso_local i32 @PrintService(i32, i32*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @ReportLastError(...) #1

declare dso_local i32 @CloseServiceHandle(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
